--- a/sample.html
+++ b/sample.html
@@ -5,8 +5,8 @@
 		<script src="bbcode.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="bbcode.css" type="text/css">
 		<style>
-			.entry-content{
-				width:700px;
+			body {
+				width:600px;
 				margin: 0 auto;
 			}
 			html {
