--- a/sample.html
+++ b/sample.html
@@ -4,15 +4,11 @@
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,600" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<style>
-			body {
-				width:600px;
-				margin: 0 auto;
-			}
-			html {
-				overflow: -moz-scrollbars-vertical;
-				overflow-y: scroll;
-				overflow-x: auto;
-			}
+		body {	width:600px;
+			margin: 0 auto; }
+		html {	overflow: -moz-scrollbars-vertical;
+			overflow-y: scroll;
+			overflow-x: auto; }
 		</style>
 		
 		<!-- BBCode CUSTOM -->
