--- a/sample.html
+++ b/sample.html
@@ -3,7 +3,7 @@
 		<title>Quelle belle galerie !</title>
 		<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700,600" rel="stylesheet" type="text/css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-		<style>
+		<style type="text/css">
 		body {	width:600px;
 			margin: 0 auto; }
 		html {	overflow: -moz-scrollbars-vertical;
